ctint/3.3.x/_sources/cpp2rst_generated/triqs_ctint/solve_params_t.rst.txt
..
   Generated automatically by cpp2rst

.. highlight:: c
.. role:: red
.. role:: green
.. role:: param


.. _triqs_ctint__solve_params_t:

triqs_ctint::solve_params_t
===========================

*#include <triqs_ctint.hpp>*

.. rst-class:: cppsynopsis

      class  :red:`solve_params_t`

The parameters for the solve function


Public members
--------------

.. table::
   :widths: 40 60


   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | h_int                         | many_body_operator              |  Interaction Hamiltonian                                                                                                               |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | n_s                           | int                             |  Number of auxiliary spins                                                                                                             |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | alpha                         | alpha_t                         |  Alpha parameter                                                                                                                       |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | n_cycles                      | int                             |  Number of MC cycles                                                                                                                   |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | length_cycle                  | int                             |  Length of a MC cycles                                                                                                                 |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | n_warmup_cycles               | int                             |  Number of warmup cycles                                                                                                               |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | random_seed                   | int                             |  Random seed of the random generator                                                                                                   |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | random_name                   | std::string                     |  Name of the random generator                                                                                                          |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | use_double_insertion          | bool                            |  Use double insertion                                                                                                                  |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | insertion_types               | std::vector<int>                |  Types of insertions to use                                                                                                            |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | max_time                      | int                             |  Maximum running time in seconds (-1 : no limit)                                                                                       |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | max_order                     | int                             |  Maximum pertubation order which is accepted in move::insert/remove
 (<0 : unlimited)                                                  |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | verbosity                     | int                             |  Verbosity                                                                                                                             |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_sign_only             | bool                            |  Measure Sign only mode                                                                                                                |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_average_sign          | bool                            |  Measure the MC sign                                                                                                                   |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_average_k             | bool                            |  Measure the average perturbation order                                                                                                |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_auto_corr_time        | bool                            |  Measure the auto-correlation time                                                                                                     |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_histogram             | bool                            |  Measure the average perturbation order distribution                                                                                   |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_density               | bool                            |  Measure the density matrix by operator insertion                                                                                      |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_M_tau                 | bool                            |  Measure M(tau)                                                                                                                        |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_M_iw                  | bool                            |  Measure M(iomega) using nfft                                                                                                          |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_M4_iw                 | bool                            |  Measure M4(iw) NFFT                                                                                                                   |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_M4pp_iw               | bool                            |  Measure M4pp(iw) NFFT                                                                                                                 |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_M4ph_iw               | bool                            |  Measure M4ph(iw) NFFT                                                                                                                 |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | n_iW_M4                       | int                             |  Number of positive bosonic Matsubara frequencies in M4                                                                                |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | n_iw_M4                       | int                             |  Number of positive fermionic Matsubara frequencies in M4                                                                              |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_M3pp_iw               | bool                            |  Measure M3pp(iw)                                                                                                                      |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_M3ph_iw               | bool                            |  Measure M3ph(iw)                                                                                                                      |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | n_iw_M3                       | int                             |  Number of positive fermionic Matsubara frequencies in M3                                                                              |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | n_iW_M3                       | int                             |  Number of positive bosonic Matsubara frequencies in M3                                                                                |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_M3pp_tau              | bool                            |  Measure M3pp(tau)                                                                                                                     |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_M3ph_tau              | bool                            |  Measure M3ph(tau)                                                                                                                     |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_M3xph_tau             | bool                            |  Measure M3xph(tau)                                                                                                                    |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | n_tau_M3                      | int                             |  Number of imaginary time points in M3                                                                                                 |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_chi2pp_tau            | bool                            |  Measure of chi2pp by insertion                                                                                                        |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_chi2ph_tau            | bool                            |  Measure of chi2ph by insertion                                                                                                        |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | n_tau_chi2                    | int                             |  Number of imaginary time points in chi2                                                                                               |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | n_iw_chi2                     | int                             |  Number of positive Matsubara frequencies in chi2                                                                                      |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | measure_chiAB_tau             | bool                            |  Measure of chiAB by insertion                                                                                                         |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | chi_A_vec                     | std::vector<many_body_operator> |  The list of all operators A                                                                                                           |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | chi_B_vec                     | std::vector<many_body_operator> |  The list of all operators B                                                                                                           |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | nfft_buf_size                 | int                             |  Size of the Nfft buffer                                                                                                               |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | post_process                  | bool                            |  Perform post processing                                                                                                               |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | det_init_size                 | int                             |  The maximum size of the determinant matrix before a resize                                                                            |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | det_n_operations_before_check | int                             |  Max number of ops before the test of deviation of the det, M^-1 is performed.                                                         |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | det_precision_warning         | double                          |  Threshold for determinant precision warnings                                                                                          |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | det_precision_error           | double                          |  Threshold for determinant precision error                                                                                             |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+
   | det_singular_threshold        | double                          |  Bound for the determinant matrix being singular: abs(det) < singular_threshold.
 For negative threshold check if !isnormal(abs(det)). |
   +-------------------------------+---------------------------------+----------------------------------------------------------------------------------------------------------------------------------------+


Non Member functions
--------------------

.. table::
   :widths: 40 60


   +---------------------------------------------------------+--+
   | :ref:`h5_write <triqs_ctint__solve_params_t__h5_write>` |  |
   +---------------------------------------------------------+--+
   | :ref:`h5_read <triqs_ctint__solve_params_t__h5_read>`   |  |
   +---------------------------------------------------------+--+

.. toctree::
    :hidden:

    solve_params_t/h5_write
    solve_params_t/h5_read